--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,7 @@ PRISMA_ENCRYPTION_KEY=""
 
 STRIPE_SECRET_KEY=""
 STRIPE_WEBHOOK_SECRET=""
+
+API_INTERNAL_SECRET="supersecretsupersecret"
+# 32 bytes
+API_ENCRYPTION_KEY="supersecretsupersecretsupersecre"
