--- a/cron/clear-old-pending/Dockerfile
+++ b/cron/clear-old-pending/Dockerfile
@@ -48,13 +48,13 @@ COPY --from=builder /app/cron/clear-old-pending/dist ./dist
 ARG PORT=8000
 ARG DATABASE_URL
 ARG PRISMA_ENCRYPTION_KEY
-ARG CRON_INTERVAL_MINUTES
+ARG PENDING_MAX_AGE
 
 ENV PORT=$PORT
 ENV NODE_ENV=production
 ENV DATABASE_URL=$DATABASE_URL
 ENV PRISMA_ENCRYPTION_KEY=$PRISMA_ENCRYPTION_KEY
-ENV CRON_INTERVAL_MINUTES=$CRON_INTERVAL_MINUTES
+ENV PENDING_MAX_AGE=$PENDING_MAX_AGE
 
 EXPOSE $PORT
 
