--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -30,9 +30,7 @@
     "@pedaki/db": "workspace:*",
     "@pedaki/design": "^0.2.2",
     "@pedaki/schema": "workspace:*",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-switch": "^1.0.3",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "10.40.0",
@@ -42,7 +40,6 @@
     "dayjs": "^1.11.10",
     "million": "^2.6.4",
     "next": "13.5.4",
-    "next-auth": "^4.23.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-wrap-balancer": "^1.1.0",
