--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -33,7 +33,7 @@
     "verbatimModuleSyntax": true,
     "paths": {
       "~/*": ["src/*"],
-//      "@trpc/server/*": ["../../node_modules/@trpc/server/*"]
+      "@trpc/server/*": ["../../node_modules/@trpc/server/*"]
     }
   },
   "include": [
