--- a/.env.example
+++ b/.env.example
@@ -14,10 +14,10 @@ MAILER_PREVIEW="true"
 RESEND_API_KEY="re_123"
 
 NEXT_PUBLIC_MAIN_URL="http://localhost:3000"
-NEXT_PUBLIC_APP_URL="http://localhost:4000"
+NEXT_PUBLIC_STORE_URL="http://localhost:4000"
 NEXTAUTH_URL="http://localhost:4000"
 NEXT_PUBLIC_API_URL="http://localhost:8080"
-APP_URL="http://localhost:4000"
+STORE_URL="http://localhost:4000"
 
 DATABASE_URL="mysql://root:example@0.0.0.0/main"
 # pn exec cloak generate
