--- a/.github/workflows/code-check.yml
+++ b/.github/workflows/code-check.yml
@@ -32,7 +32,7 @@ jobs:
           cache-dependency-path: pnpm-lock.yaml
 
       - name: Install deps
-        run: pnpm install --child-concurrency 3 --frozen-lockfile --prefer-offline
+        run: pnpm install --frozen-lockfile --prefer-offline
 
       - name: Build (packages)
         run: pnpm build --filter="./packages/*"
