--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "typecheck": "turbo run typecheck",
     "format": "turbo run format",
     "clean": "turbo run clean && rimraf node_modules",
-    "check": "cross-env SKIP_ENV_VALIDATION=true turbo typecheck lint format:check test"
+    "check": "cross-env SKIP_ENV_VALIDATION=true turbo typecheck lint format:check test",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@pedaki/eslint-config": "^0.1.2",
@@ -36,12 +37,20 @@
     "esbuild-plugin-file-path-extensions": "^1.0.0",
     "execa": "^8.0.1",
     "fs-extra": "^11.1.1",
+    "husky": "^8.0.3",
     "rimraf": "latest",
+    "lint-staged": "^15.0.2",
     "tsconfig-replace-paths": "^0.0.14",
     "tsup": "^7.2.0",
     "turbo": "^1.10.16",
     "typescript": "^5.2.2",
     "vitest": "^0.34.6"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   },
   "engines": {
     "node": ">=18.17.0 <19.0.0",
