--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -36,10 +36,10 @@
     "fastify": "^4.24.3",
     "fastify-raw-body": "^4.2.2",
     "next-auth": "^4.24.4",
-    "stripe": "^14.2.0",
     "superjson": "^2.2.0",
     "trpc-openapi": "^1.2.0",
     "@pedaki/common": "^0.1.4",
+    "@pedaki/services": "workspace:*",
     "@t3-oss/env-core": "^0.7.1",
     "zod": "^3.22.4"
   },
