--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -32,7 +32,12 @@
     "experimentalDecorators": true,
     "verbatimModuleSyntax": true,
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": [
+        "src/*"
+      ],
+      "@trpc/server/*": [
+        "../../node_modules/@trpc/server/*"
+      ]
     }
   },
   "include": [
