--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -19,6 +19,7 @@
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
