--- a/.env.example
+++ b/.env.example
@@ -18,11 +18,11 @@ API_ENCRYPTION_KEY="supersecretsupersecretsupersecre" # 32 bytes
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 
-DOCKER_HOST="ghcr.io"
-DOCKER_ORGANISATION="pedakihq"
-DOCKER_PACKAGE_NAME="pedaki-premium"
-DOCKER_IMAGE_VERSION="0.0.0"
-DOCKER_USERNAME=""
-DOCKER_PASSWORD=""
+APP_DOCKER_HOST="ghcr.io"
+APP_DOCKER_ORGANISATION="pedakihq"
+APP_DOCKER_PACKAGE_NAME="pedaki-premium"
+APP_DOCKER_IMAGE_VERSION="0.0.0"
+APP_DOCKER_USERNAME=""
+APP_DOCKER_PASSWORD=""
 
 PULUMI_ACCESS_TOKEN=xxx
