--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@ PRISMA_ENCRYPTION_KEY=""  # pn exec cloak generate
 
 STRIPE_SECRET_KEY=""
 STRIPE_WEBHOOK_SECRET=""
+STRIPE_PRODUCT_HOSTED_MONTHLY_PRICE_ID="price_1NyhGDGjIZI03z0TsT9T7Om0"
+STRIPE_PRODUCT_HOSTED_YEARLY_PRICE_ID="price_1O98OHGjIZI03z0TE6620OPO"
 
 API_INTERNAL_SECRET="supersecretsupersecret"
 API_ENCRYPTION_KEY="supersecretsupersecretsupersecre" # 32 bytes
