--- a/packages/pulumi/package.json
+++ b/packages/pulumi/package.json
@@ -23,6 +23,7 @@
     "@pedaki/common": "^0.1.4",
     "@pedaki/models": "workspace:*",
     "@pulumi/aws": "^6.7.0",
+    "@pulumi/cloudflare": "^5.13.1",
     "@pulumi/pulumi": "^3.92.0",
     "@pulumi/random": "^4.14.0",
     "@t3-oss/env-core": "^0.7.1",
