--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,23 +23,23 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
-    "@auth/prisma-adapter": "^1.3.3",
+    "@auth/prisma-adapter": "^1.1.0",
     "@baselime/node-opentelemetry": "^0.3.0",
     "@fastify/cookie": "^9.3.1",
-    "@fastify/cors": "^9.0.1",
+    "@fastify/cors": "^9.0.0",
     "@opentelemetry/api": "1.7.0",
-    "@opentelemetry/instrumentation-fastify": "^0.33.0",
+    "@opentelemetry/instrumentation-fastify": "^0.32.6",
     "@opentelemetry/sdk-trace-node": "^1.21.0",
-    "@pedaki/common": "0.5.2-beta.7",
+    "@pedaki/common": "^0.4.2",
     "@pedaki/db": "workspace:*",
     "@pedaki/logger": "workspace:*",
-    "@pedaki/mailer": "0.5.2-beta.7",
+    "@pedaki/mailer": "^0.4.2",
     "@pedaki/models": "workspace:*",
     "@pedaki/pulumi": "workspace:*",
     "@pedaki/services": "workspace:*",
-    "@t3-oss/env-core": "^0.9.2",
-    "@trpc/server": "10.45.1",
-    "fastify": "^4.26.0",
+    "@t3-oss/env-core": "^0.8.0",
+    "@trpc/server": "10.45.0",
+    "fastify": "^4.25.2",
     "fastify-raw-body": "^4.3.0",
     "next-auth": "^4.24.5",
     "superjson": "^2.2.1",
@@ -48,13 +48,13 @@
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.5.1",
-    "@types/node": "^20.11.17",
+    "@types/node": "^18.19.10",
     "esbuild-plugin-tsconfig-paths": "^1.0.1",
     "preview-email": "^3.0.19",
-    "tsx": "^4.7.1"
+    "tsx": "^4.7.0"
   },
   "engines": {
-    "node": ">=20",
+    "node": ">=18.0.0 <19.0.0",
     "pnpm": ">=8.0.0",
     "yarn": "use-pnpm",
     "npm": "use-pnpm"
