--- a/cron/demo-community/package.json
+++ b/cron/demo-community/package.json
@@ -26,16 +26,16 @@
     "@pedaki/logger": "workspace:*",
     "@pedaki/pulumi": "workspace:*",
     "@pedaki/services": "workspace:*",
-    "@prisma/instrumentation": "^5.9.1",
-    "@t3-oss/env-core": "^0.9.2",
+    "@prisma/instrumentation": "^5.8.1",
+    "@t3-oss/env-core": "^0.8.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
-    "tsx": "^4.7.1"
+    "@types/node": "^18.19.10",
+    "tsx": "^4.7.0"
   },
   "engines": {
-    "node": ">=20",
+    "node": ">=18.0.0 <19.0.0",
     "pnpm": ">=8.0.0",
     "yarn": "use-pnpm",
     "npm": "use-pnpm"
