--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "husky": "^9.0.10"
+    "husky": "^8.0.3"
   },
   "devDependencies": {
-    "@pedaki/eslint-config": "0.5.2-beta.7",
-    "@pedaki/prettier-config": "0.5.2-beta.7",
+    "@pedaki/eslint-config": "^0.4.2",
+    "@pedaki/prettier-config": "^0.4.2",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^20.11.17",
+    "@types/node": "^18.19.10",
     "@vitest/coverage-v8": "^1.2.2",
     "cpy": "^11.0.0",
     "cross-env": "^7.0.3",
@@ -42,11 +42,11 @@
     "execa": "^8.0.1",
     "expect-type": "^0.17.3",
     "fs-extra": "^11.2.0",
-    "lint-staged": "^15.2.2",
+    "lint-staged": "^15.2.0",
     "rimraf": "latest",
     "tsconfig-replace-paths": "^0.0.14",
-    "tsup": "^8.0.2",
-    "turbo": "^1.12.3",
+    "tsup": "^8.0.1",
+    "turbo": "^1.11.3",
     "typescript": "^5.3.3",
     "vitest": "^1.2.2"
   },
@@ -57,7 +57,7 @@
     ]
   },
   "engines": {
-    "node": ">=20",
+    "node": ">=18.17.0 <19.0.0",
     "pnpm": ">=8.0.0",
     "yarn": "use-pnpm",
     "npm": "use-pnpm"
