--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -16,19 +16,19 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@planetscale/database": "^1.16.0",
-    "@prisma/adapter-planetscale": "5.9.1",
-    "@prisma/client": "^5.9.1",
-    "@prisma/instrumentation": "^5.9.1",
-    "@t3-oss/env-core": "^0.9.2",
-    "prisma-field-encryption": "^1.5.2",
+    "@planetscale/database": "^1.14.0",
+    "@prisma/adapter-planetscale": "5.8.1",
+    "@prisma/client": "^5.8.1",
+    "@prisma/instrumentation": "^5.8.1",
+    "@t3-oss/env-core": "^0.8.0",
+    "prisma-field-encryption": "^1.5.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "prisma": "^5.9.1"
+    "prisma": "^5.8.1"
   },
   "engines": {
-    "node": ">=20",
+    "node": ">=18.0.0 <19.0.0",
     "pnpm": ">=8.0.0",
     "yarn": "use-pnpm",
     "npm": "use-pnpm"
