--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -23,10 +23,10 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@prisma/client": "^5.9.1"
+    "@prisma/client": "^5.8.1"
   },
   "engines": {
-    "node": ">=20",
+    "node": ">=18.0.0 <19.0.0",
     "pnpm": ">=8.0.0",
     "yarn": "use-pnpm",
     "npm": "use-pnpm"
