--- a/packages/pulumi/package.json
+++ b/packages/pulumi/package.json
@@ -22,21 +22,21 @@
   "author": "Nathan David <me@vahor.fr>",
   "license": "MIT",
   "dependencies": {
-    "@pedaki/common": "0.5.2-beta.7",
+    "@pedaki/common": "^0.4.2",
     "@pedaki/logger": "workspace:*",
     "@pedaki/models": "workspace:*",
-    "@pulumi/aws": "^6.21.0",
-    "@pulumi/cloudflare": "^5.20.0",
-    "@pulumi/pulumi": "^3.105.0",
+    "@pulumi/aws": "^6.18.2",
+    "@pulumi/cloudflare": "^5.19.0",
+    "@pulumi/pulumi": "^3.103.1",
     "@pulumi/random": "^4.15.1",
-    "@t3-oss/env-core": "^0.9.2",
+    "@t3-oss/env-core": "^0.8.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.5.1"
   },
   "engines": {
-    "node": ">=20",
+    "node": ">=18.0.0 <19.0.0",
     "pnpm": ">=8.0.0",
     "yarn": "use-pnpm",
     "npm": "use-pnpm"
